GoalTracker/force-app/main/default/objects/CMU_1000_Setting__mdt/CMU_1000_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CMU 1000 Setting</label>
    <pluralLabel>CMU 1000 Settings</pluralLabel>
</CustomObject>