GoalTracker/force-app/main/default/objects/CMU_1000_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the setting is used or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>