GoalTracker/force-app/main/default/objects/CMU_1000_Setting__mdt/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>