GoalTracker/force-app/main/default/objects/CMU_1000_Setting__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>